--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="server_management_android">Server Management Android</string>
     <string name="cpu_utilisation">CPU Utilisation</string>
     <string name="ram_utilisation">RAM Utilisation</string>
+    <string name="change_ip">Change IP</string>
 </resources>
